# openspec-autocoder

./: .alert-state.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  config.example.yaml  install.sh
autocoder/: Cargo.toml
autocoder/src/: agentic_run.rs  alert_state.rs  alerts.rs  attribution.rs  busy_marker.rs  changelog_triage.rs  chatops.rs  code_implements_spec.rs  code_reviewer.rs  config.rs  control_socket.rs  failure_state.rs  git.rs  github.rs  github_credentials.rs  iteration_pending.rs  llm.rs  main.rs  mcp_askuser_server.rs  outcome_store.rs  paths.rs  perma_stuck.rs  polling_loop.rs  queue.rs  recovery_classification.rs  revisions.rs  sandbox.rs  spec_revision.rs  spec_sync.rs  submission_store.rs  testing.rs  tool_probe.rs  verifier_gate.rs  workspace.rs
autocoder/src/audits/: architecture_consultative.rs  brightline.rs  canon_consolidation.rs  canon_contradiction.rs  dependency_update.rs  documentation_audit.rs  drift.rs  missing_tests.rs  mod.rs  scheduler.rs  security_bug.rs  spec_sync.rs  specs_writing.rs  state.rs  test_support.rs
autocoder/src/chatops/: discord.rs  matrix.rs  mattermost.rs  mod.rs  operator_commands.rs  slack.rs  teams.rs
autocoder/src/cli/: audit.rs  install.rs  install_systemd.service  mod.rs  reload.rs  rewind.rs  run.rs
autocoder/src/executor/: claude_cli.rs  mod.rs
autocoder/src/polling/: brownfield.rs  brownfield_survey.rs  mod.rs  scout.rs  spec_it.rs
autocoder/src/polling_loop/: mod.rs
autocoder/src/polling_loop/tests/: mod.rs  support0.rs  t21.rs
autocoder/src/preflight/: canon_contradiction.rs  change_contradiction.rs  mod.rs  spec_archivability.rs
autocoder/src/prompts/: loader.rs  mod.rs
autocoder/src/rag/: embedding.rs  mod.rs
autocoder/src/state/: mod.rs  scout_run.rs
autocoder/tests/: openspec_pointers.rs  path_literals_audit.rs
(+544 files in other folders)
