[package]
name = "autocoder"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Industrious Kraken LLC"]

[dependencies]
anyhow = "1.0.102"
arc-swap = "1"
async-trait = "0.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2"
tokio = { version = "1.52.2", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
tokio-util = "0.7"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "sink"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1"
tracing-test = "0.2"
